--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ indicatif = "0.17.8"
 notify-debouncer-mini = "0.4.1"
 serde_json = "1.0.114"
 serde = { version = "1.0.197", features = ["derive"] }
+shlex = "1.3.0"
 toml = "0.8.10"
 winnow = "0.6.5"
 
