--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ console = "0.15.8"
 home = "0.5.9"
 indicatif = "0.17.8"
 notify-debouncer-mini = "0.4.1"
-regex = "1.10.3"
 serde_json = "1.0.114"
 serde = { version = "1.0.197", features = ["derive"] }
 toml = "0.8.10"
+winnow = "0.6.5"
 
 [[bin]]
 name = "rustlings"
