--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ indicatif = "0.17.8"
 notify-debouncer-mini = "0.4.1"
 serde_json = "1.0.114"
 serde = { version = "1.0.197", features = ["derive"] }
-toml_edit = { version = "0.22.9", default-features = false, features = ["parse", "serde"] }
+toml = "0.8.10"
+which = "6.0.1"
 
 [[bin]]
 name = "rustlings"
