--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,7 @@ indicatif = "0.17.8"
 notify-debouncer-mini = "0.4.1"
 serde_json = "1.0.114"
 serde = { version = "1.0.197", features = ["derive"] }
-shlex = "1.3.0"
-toml = "0.8.10"
-winnow = "0.6.5"
+toml_edit = { version = "0.22.9", default-features = false, features = ["parse", "serde"] }
 
 [[bin]]
 name = "rustlings"
