--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 anyhow = "1.0.81"
 clap = { version = "4.5.2", features = ["derive"] }
 console = "0.15.8"
-home = "0.5.9"
+glob = "0.3.0"
 indicatif = "0.17.8"
 notify-debouncer-mini = "0.4.1"
 serde_json = "1.0.114"
